[gd_scene load_steps=10 format=3 uid="uid://c5kcbj13okxyx"]

[ext_resource type="Script" uid="uid://v0hsdri215by" path="res://scripts/ui/endgame_screen.gd" id="1_s7nbu"]
[ext_resource type="Texture2D" uid="uid://bok5k5tu748p2" path="res://Assets/UI/tutorial-lab.png" id="2_cbsht"]
[ext_resource type="FontFile" uid="uid://neecrem67in6" path="res://Assets/fonts/CyberpunkCraftpixPixel.otf" id="2_vrvio"]
[ext_resource type="AudioStream" uid="uid://cgp03v0buibmb" path="res://Assets/sounds/menu_sounds/Pixel 1.mp3" id="4_us64b"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_us64b"]
texture = ExtResource("2_cbsht")
region_rect = Rect2(77, 33.7, 848.2, 486.2)
modulate_color = Color(0.593134, 0.593134, 0.593134, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ekxnf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ekxnf"]
bg_color = Color(0.868985, 0.868985, 0.868985, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0.0338533, 0.0338533, 0.0338533, 0.34902)
shadow_size = 8
shadow_offset = Vector2(-5, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bqqt6"]
bg_color = Color(0.60933, 0.60933, 0.60933, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0.0338533, 0.0338533, 0.0338533, 0.34902)
shadow_size = 8
shadow_offset = Vector2(-5, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vue75"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0.0338533, 0.0338533, 0.0338533, 0.34902)
shadow_size = 8
shadow_offset = Vector2(-5, 5)

[node name="EndgameScreen" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s7nbu")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_us64b")

[node name="DeathTitle" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -477.0
offset_top = -218.5
offset_right = 477.0
offset_bottom = -83.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = -6
theme_override_constants/shadow_offset_y = 8
theme_override_fonts/font = ExtResource("2_vrvio")
theme_override_font_sizes/font_size = 128
text = "You Died"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VictoryTitle" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -477.0
offset_top = -218.5
offset_right = 477.0
offset_bottom = -83.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = -6
theme_override_constants/shadow_offset_y = 8
theme_override_fonts/font = ExtResource("2_vrvio")
theme_override_font_sizes/font_size = 120
text = "You survided..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="PauseButtons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 185.5
offset_right = 100.0
offset_bottom = 276.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="MainMenu" type="Button" parent="PauseButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0.0430392, 0.0430392, 0.0430392, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_vrvio")
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxEmpty_ekxnf")
theme_override_styles/hover = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bqqt6")
theme_override_styles/normal = SubResource("StyleBoxFlat_vue75")
text = "Main Menu"

[node name="Exit" type="Button" parent="PauseButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0.0430392, 0.0430392, 0.0430392, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_vrvio")
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxEmpty_ekxnf")
theme_override_styles/hover = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bqqt6")
theme_override_styles/normal = SubResource("StyleBoxFlat_vue75")
text = "Exit"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_us64b")
autoplay = true

[connection signal="pressed" from="PauseButtons/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="PauseButtons/Exit" to="." method="_on_exit_pressed"]
